--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGODB_URI=mongodb+srv://pavitramallick:bltLRig456WxE17F@cluster0.tqsss.mongodb.net/pinokio_db?retryWrites=true&w=majority&appName=Cluster0
 PORT=5001
 
+JWT_SECRET=mysecretkey
+NODE_ENV=development
 
 #bltLRig456WxE17F
