--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,7 @@ PORT=5001
 JWT_SECRET=mysecretkey
 NODE_ENV=development
 
+CLOUDINAR_CLOUD_NAME=dw3zwmxhp
+CLOUDINAR_API_KEY=921719541654619
+CLOUDINAR_API_SECRET=ILt6-rUqI6yR7CYyozhF_a5yHN0
 #bltLRig456WxE17F
