--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
+  "name": "pinokio",
+  "version": "1.0.0",
+  "description": "Realtime chatting application\r Hieee\r My name is kritisha\r dnliuefhasdklihf",
+  "main": "index.js",
   "dependencies": {
-    "mongodb": "^6.10.0"
-  }
+    "bson": "^6.10.0",
+    "memory-pager": "^1.5.0",
+    "mongodb": "^6.10.0",
+    "mongodb-connection-string-url": "^3.0.1",
+    "punycode": "^2.3.1",
+    "sparse-bitfield": "^3.0.3",
+    "tr46": "^4.1.1",
+    "webidl-conversions": "^7.0.0",
+    "whatwg-url": "^13.0.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "build":"",
+    "start":""
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
