--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.2",
+    "pinokio": "file:..",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1"
   },
